catch unguessable annotation types